--- a/package.json
+++ b/package.json
@@ -1,5 +1,24 @@
 {
+  "scripts": {
+    "dev": "parcel src/index.html",
+    "build": "rm -rf dist && parcel build src/index.html --no-minify --public-url ./"
+  },
   "dependencies": {
     "style.js": "^0.0.2"
-  }
+  },
+  "name": "bing-dwen-dwen",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shanshandd/BingDwenDwen.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/shanshandd/BingDwenDwen/issues"
+  },
+  "homepage": "https://github.com/shanshandd/BingDwenDwen#readme",
+  "description": ""
 }
